Fix Repository wrapping

--- a/src/components/Repository/index.css
+++ b/src/components/Repository/index.css
@@ -41,8 +41,9 @@
 .Repository-infos{
     display: flex;
     flex: 8;
+    flex-direction: column;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
 }
 
@@ -107,8 +108,16 @@
 
 .Repository-status{
     display: flex;
+    flex: 1;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
     margin-top: -12px;
+}
+.Repository-texts{
+    display: flex;
+    flex: 3;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
